# portfolio-trading-platform

./: .env.example  .gitignore  COLLABORATION.md  DEV_NOTES.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
src/: __init__.py  app.py  app_dashboard.py  app_trading.py  scenario_simulator.py
src/agents/: portfolio_agent.py
src/core/: portfolio_metrics.py
src/database/: __init__.py  models.py
src/services/: __init__.py  order_execution.py  portfolio_service.py
src/utils/: market_data.py  pattern_detection.py  portfolio_analytics.py  sector_analysis.py  visualizations.py
tests/: conftest.py  test_portfolio_agent.py  test_portfolio_metrics.py
